--- a/objects1.html
+++ b/objects1.html
@@ -1,25 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
+
 <body>
+    <p>Rock Paper Scissors</p>
+
+    <button onclick="
+    playGame('rock');
+    ">
+        Rock
+    </button>
+
+    <button onclick="
+    playGame('paper');
+    ">
+        Paper
+    </button>
+
+    <button onclick="
+    playGame('scissors');
+    ">
+        Scissors
+    </button>
+    <button onclick="
+    resetScore();
+    ">Reset Score</button>
+
     <script>
-        const product = {
-            name : 'socks',
-            price : 1090
-        };
-        console.log(product);
-        console.log(product.price);
-        console.log(product.name);
-        product.name = 'blaza';
-        console.log(product.name);
-        product.meme = 'fat';
-        console.log(product);
-        delete product.meme;
-        console.log(product);
+
+        const randomNumber = Math.random();
+        let result = '';
+        let computerMove;
+        let lose = 0, win = 0, tie = 0;
+
+        function playGame(yourMove) {
+            pickComputerMove();
+            pickComputerMove();
+            if (yourMove === 'rock') {
+                if (computerMove === 'rock') result = "Tie";
+                else if (computerMove === 'paper') result = "You Lose";
+                else if (computerMove === 'scissors') result = "You Win";
+            }
+            else if (yourMove === 'paper') {
+                if (computerMove === 'rock') result = "You Win";
+                else if (computerMove === 'paper') result = "Tie";
+                else if (computerMove === 'scissors') result = "You Lose";
+            }
+            else if (yourMove === 'scissors') {
+                if (computerMove === 'paper') result = "You Win";
+                else if (computerMove === 'scissors') result = "Tie";
+                else if (computerMove === 'rock') result = "You Lose";
+            }
+            scoreBoard(result);
+            alert(
+                `You picked ${yourMove}.Computer picked ${computerMove}.${result} \n Win: ${win}  Lose: ${lose}  Tie: ${tie}`
+            );
+        }
+
+
+
+
+        function pickComputerMove() {
+            if (randomNumber >= 0 && randomNumber < 1 / 3) {
+                computerMove = 'rock';
+            } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+                computerMove = "paper";
+            } else {
+                computerMove = "scissors";
+            }
+            console.log(randomNumber,computerMove);
+        }
+
+
+
+        function scoreBoard(){
+            if(result === "You Win")
+                win++ ;
+            else if(result === "You Lose")
+                lose++;
+            else if(result === "Tie")
+                tie++;
+            console.log(lose);
+        }
+
+        function resetScore(){
+            win -= win;
+            lose -= lose;
+            tie -= tie;
+        }
+
     </script>
 </body>
+
 </html>
